[FIX] Small fix for footer not showing properly on small screens

--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -78,7 +78,7 @@ a {
 
 .hero {
   display: flex;
-  margin-top: 100px;
+  margin: 100px 0px;
   justify-content: center;
 
   &__container {
