--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -76,7 +76,7 @@ a {
 
 .hero {
   display: flex;
-  margin-top: 100px;
+  margin: 100px 0px;
   justify-content: center;
 }
 .hero__container {
